# Geant4IPMESS

./: .gitignore  .gitmodules  CMakeLists.txt  MPIhost  README.md  analysis.C  camera.C  config.yaml  exportSTL.py  icons.mac  init_vis.mac  main.cpp  merger.sh  run.mac  vis.mac
data/Camera/: Camera.stl
data/IPM/: Frame.stl  Frame.txt  Plaque_BT.stl  Plaque_BT.txt
data/LWU_E_type1/: LWU_foot.stl  LWU_foot_inter.stl  Quad_1.stl  Quad_1.txt  Quad_Support_1.txt
data/Lens/: Lens.stl
data/MCP/: MCP_glass.stl  MCP_glass.txt
include/: ESSActionInitialization.hh  ESSAnalysis.hh  ESSBeamStopHit.hh  ESSBeamStopSD.hh  ESSCameraHit.hh  ESSCameraSD.hh  ESSConfigManager.hh  ESSConstants.hh  ESSDetectorConstruction.hh  ESSEventAction.hh  ESSMCPHit.hh  ESSMCPSD.hh  ESSPrimaryGeneratorAction.hh  ESSRunAction.hh  ESSScreenHit.hh  ESSScreenStopSD.hh  ESSSensorParameterisation.hh
src/: ESSActionInitialization.cc  ESSBeamStopHit.cc  ESSBeamStopSD.cc  ESSCameraHit.cc  ESSCameraSD.cc  ESSConfigManager.cc  ESSDetectorConstruction.cc  ESSEventAction.cc  ESSMCPHit.cc  ESSMCPSD.cc  ESSPrimaryGeneratorAction.cc  ESSRunAction.cc  ESSScreenStopSD.cc  ESSSensorParameterisation.cc
